def/force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <description>List of users</description>
    <label>Customer</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Customer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>