def/force-app/main/default/objects/Customer__c/fields/city1__c.field-meta.xml
<CustomField>
    <fullName>city1__c</fullName>
    <label>city1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>mumbai1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>