def/force-app/main/default/objects/Customer__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maharasthra</fullName>
                <default>true</default>
                <label>Maharasthra</label>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>