def/force-app/main/default/objects/Customer__c/validationRules/Testval.validationRule-meta.xml
<ValidationRule>
    <fullName>Testval</fullName>
    <active>true</active>
    <errorConditionFormula>age__c  &gt; 100</errorConditionFormula>
    <errorDisplayField>age__c</errorDisplayField>
    <errorMessage>Age cannot be more than 100</errorMessage>
</ValidationRule>